# emberlog-api

./: .dockerignore  .env.example  AGENTS.md  Dockerfile  LICENSE  README.md  pyproject.toml  pyrightconfig.json
docs/: CONTAINER.md  CURRENT_STATE.md  DOCS_REPO_ALIGNMENT_REPORT.md  Emberlog_STATS_FEATURE_DESIGN.md  K8S.md  LOGGING.md  REQUIREMENTS.md  TRAFFIC_MONITOR_API_CONTRACT_v0.1.md
emberlog_api/app/: main.py
emberlog_api/app/core/: lifespan.py  settings.py
emberlog_api/app/db/: pool.py
emberlog_api/app/notifier/: notifier.py
emberlog_api/app/services/: mqtt_consumer.py
emberlog_api/app/stats/: __init__.py  auth.py  ingest.py  models.py  routes.py  service.py  sse.py  store.py
emberlog_api/migrations/: 2026-02-16_traffic_monitor.sql  schema_v1.0.0.sql  schema_v1.1.0_notifications.sql  schema_v1.2.0_notifications.sql  schema_v1.2.1_users_to_uuid.sql  schema_v1.3.0_notifications.sql  schema_v1.3.1_notifications_cleanup.sql  schema_v1.3.2_notification_status.sql  setup.sql
emberlog_api/models/: incident.py
emberlog_api/utils/: log_context.py  log_safety.py  loggersetup.py  logging_filters.py
k8s/argocd/: emberlog-api-app.yaml
k8s/base/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret-template.yaml  service.yaml
k8s/overlays/home/: kustomization.yaml
tests/: conftest.py  test_health_endpoints.py  test_incidents_list.py  test_logging_setup.py  test_mqtt_consumer.py  test_stats_systems.py  test_stats_ws_ingest.py  test_traffic_endpoints.py
tools/: emberlog-api.sh  emberlog-notifier.sh  emberlog-web.sh  emberlog.sh
(+6 files in other folders)
